<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/topImg"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="center"
            android:scrollX="50dp"
            android:scrollY="-400dp"/>

        <LinearLayout
            android:id="@+id/fuck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topImg"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:orientation="vertical"
            android:paddingStart="28dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/checkbox_on_background"
                android:drawablePadding="8dp"
                android:text="@string/homeless" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_weight="0.8"
                android:drawableStart="@android:drawable/checkbox_on_background"
                android:drawablePadding="8dp"
                android:text="@string/something" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@android:drawable/checkbox_on_background"
                android:drawablePadding="8dp"
                android:text="@string/status" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#2196F3">

            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:drawableBottom="@color/colorAccent"
                android:text="@string/about_me" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#2196F3">

            </FrameLayout>

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:background="#00A2526F"
                android:gravity="center"
                android:text="@string/btn_txt"
                android:textColor="#B71C1C" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/fuck"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/empty1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/vk"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/vk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/empty2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/vk"
                app:srcCompat="@mipmap/ic_launcher" />

        </RelativeLayout>
    </RelativeLayout>

</ScrollView>